# IBCDFO

./: .black  .flake8  .gitignore  .gitmodules  .miss_hit  .readthedocs.yml  .typos.toml  CONTRIBUTING.rst  DeveloperInfo.md  LICENSE  README.md  REQUIRED_MINQ_COMMIT  ibcdfo  miss_hit.cfg  setup.py  test.py  ths_has_a_typo_in_it.txt  tox.ini  typos.toml
.github/workflows/: black.yml  build_docs.yml  check_matlab_standards.yml  check_python_standards.yml  check_spelling.yml  check_standard.yml  check_standards.yml  ci.yml  flake8.yml  github-ci-action.yml  github-ci-buildDocs.yml  matlab_ci.yml  measure_coverage.yml  miss_hit.yml  release.yml  setup_tox_github_action.sh  test_matlab.yml  test_python.yml  test_python_oldest.yml  test_tools.yml
docs/: advanced_pounders.rst  conf.py  contributing.rst  documentation.rst  get_started.rst  goombah.rst  ibcdfo.bib  index.rst  latex_macros_base.json  latex_macros_notation.json  manifold_sampling.rst  matlab_dev_env.rst  new_subpackage.rst  pounders.rst  python_dev_env.rst  requirements.txt  sphinx_macros.json
docs/source/: bibliography.rst  conf.py  developers_guide.rst  general_info.rst  get_started.rst  ibcdfo.bib  index.rst  latex_macros_base.json  latex_macros_notation.json  pounders.rst  sphinx_macros.json
goombah/: README.md
goombah/m/: .miss_hit  goombah.m  goombah_wo_msp.m
goombah/py/: goombah.py  save_quadratics_call_GAMS.py
ibcdfo_pypkg/: .black  .coveragerc  .flake8  DeveloperInfo.md  MANIFEST.in  pyproject.toml  setup.py  tox.ini
ibcdfo_pypkg/ibcdfo/: __init__.py  pounders
ibcdfo_pypkg/src/ibcdfo/: __init__.py  _get_minq_installation.py  load_tests.py  manifold_sampling  pounders  test.py
ibcdfo_pypkg/src/ibcdfo/PkgData/: REQUIRED_MINQ_COMMIT
ibcdfo_pypkg/src/ibcdfo/tests/: TestPounders.py  TestPoundersExtensive.py  TestPoundersSimple.py
manifold_sampling/: README.md  compare_matlab_and_python.m
manifold_sampling/m/: build_p_models.m  call_user_scripts.m  check_inputs_and_initialize.m  choose_generator_set.m  evaluate_points_to_force_valid_model.m  manifold_sampling_primal.m  minimize_affine_envelope.m  product_of_cells.m  update_models.m
manifold_sampling/matlab/: call_user_scripts.m  check_inputs_and_initialize.m  manifold_sampling_primal.m  minimize_affine_envelope.m
manifold_sampling/py/: .flake8  __init__.py  bfgs_hessian.py  bfgs_hessian_local.py  build_p_models.py  call_user_scripts.py  call_user_scripts_with_gradients.py  check_inputs_and_initialize.py  check_inputs_and_initialize_with_gradients.py  choose_generator_set.py  create_censored_L1_loss_hfun.py  create_piecewise_quadratic_hfun.py  evaluate_points_to_force_valid_model.py  general_nonsmooth_h_funs.py  general_smooth_h_funs.py  h_examples.py  load_tests.py  manifold_sampling_primal.py  manifold_sampling_primal_with_gradients.py  matrix_Ffuns.py  min_norm_interpolation_hessian.py  minimize_affine_envelope.py  overapproximating_hessian.py  prepare_outputs_before_return.py  prepare_outputs_before_return_with_gradients.py  solve_proj_zero_convex_hull.py  sr1_hessian.py  sr1_hessian_local.py  test.py  update_models.py
pounders/: README.md  compare_matlab_and_python.m
pounders/m/: bmpts.m  boxline.m  bqmin.m  check_minq_installation.m  checkinputss.m  clean_up_before_return.m  create_trsp_solver.m  formquad.m  formquad_inputs.mat  formquad_model_improvement.m  gaussnewton.m  larger_test_formquad.m  phi2eval.m  pounders.m  prepare_outputs_before_return.m  test_formquad.m  top_of_while_loop.mat
pounders/matlab/: bmpts.m  boxline.m  bqmin.m  checkinputss.m  formquad.m  phi2eval.m  (+1 more)
roboboa/: roboboa.py  testing_roboboa.py
subproblems/: minimize_min_quadratic_models.gms  minimize_min_squared_quadratic_models.gms  project_zero_onto_convex_hull_2.m  save_quadratics_call_GAMS.m  solveSubproblem.m  solve_matts_LP.m  solve_matts_QCP.m
tools/: .black  check_flake8_compliance.sh  clean_clone.sh  compare_pounders_benchmarks.py  compare_pounders_results.py  format_with_black.sh  test_ibcdfo.m  test_ibcdfo_installation.py  test_ibcdfo_python_installation.py
(+275 files in other folders)
